[desktop fixes 2] fix visibility left column

--- a/themes/wiemar/_dev/css/components/categories.scss
+++ b/themes/wiemar/_dev/css/components/categories.scss
@@ -279,6 +279,8 @@
     }
   }
 }
+.page-new-products #left-column .ps-newproducts { display: none }
+.page-prices-drop #left-column .ps-specials { display: none }
 
 .pagination {
   width: 100%;
